package org.africa.semicolon.data.models;

import lombok.AllArgsConstructor;
import lombok.Builder;
import lombok.Data;
import lombok.NoArgsConstructor;
import org.springframework.data.annotation.Id;
import org.springframework.data.mongodb.core.mapping.Document;

import java.util.List;


@Data
@AllArgsConstructor
@NoArgsConstructor
@Builder
@Document("collection = users")

public class User {
    @Id
    private String id;
    private String name;
    private String email;
    private String phone;
    private String password;
    private String role;
    private List<Address> addresses;

}
